--- a/app/src/main/res/layout/line_clients_list_item.xml
+++ b/app/src/main/res/layout/line_clients_list_item.xml
@@ -46,7 +46,7 @@
         android:maxLines="1"
         android:layout_below="@+id/name"
         android:text="ewewe"
-        android:textColor="@color/light_gray"
+        android:textColor="@color/light_gray2"
         android:textSize="13sp" />
 
         <ImageView
@@ -56,6 +56,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="15dip"
+            android:visibility="gone"
             android:src="@drawable/circle_uncheck" />
     </RelativeLayout>
 
